--- a/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
+++ b/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
@@ -28,7 +28,7 @@
 
 \usepackage[
 backend=biber,
-style=alphabetic,
+style=numeric,
 sorting=ynt]{biblatex}
 \addbibresource{masterbib.bib}
 
@@ -79,7 +79,7 @@ sorting=ynt]{biblatex}
 \lipsum[1]
 
 \section{Introduction}
-This is a test of the introduction \cite{Edelstein1982}
+This is a test of the introduction \cite{Gow1995}
 
 \section{Model formulation}
 \lipsum[3]
@@ -132,12 +132,12 @@ x, y = longitude, latitude of hospital i \\
 The output lists a discrete set of groupings of the hospitals with the corresponding locations of the storage containers for each hospital group. In figure 1, one potential combination of hospitals grouped to specific storage locations is shown. 
 
 % TODO: \usepackage{graphicx} required
-\begin{figure}
-	\centering
-	\includegraphics[width=0.7\linewidth]{}
-	\caption[Fig 1]{caption 0??}
-	\label{Fig 1}
-\end{figure}
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.7\linewidth]{}
+%	\caption[Fig 1]{caption 0??}
+%	\label{Fig 1}
+%\end{figure}
 
 
 \subsection{Cost Function}
@@ -168,12 +168,12 @@ Where $P$ represents the total medpacks delivered, $\sum{t}$ is an estimate of t
 
 \section{Results and Analysis}
 % TODO: \usepackage{graphicx} required
-\begin{figure*}
-	\centering
-	\includegraphics[width=0.7\linewidth]{}
-	\caption[Fig 1.]{caption 1}
-	\label{Fig 1.}
-\end{figure*}
+%\begin{figure*}
+%	\centering
+%	\includegraphics[width=0.7\linewidth]{}
+%	\caption[Fig 1.]{caption 1}
+%	\label{Fig 1.}
+%\end{figure*}
 
 \subsection{Model output}
 \lipsum[6]
@@ -182,20 +182,20 @@ Where $P$ represents the total medpacks delivered, $\sum{t}$ is an estimate of t
 \lipsum[7]
 
 % TODO: \usepackage{graphicx} required
-\begin{figure}
-	\centering
-	\includegraphics[width=1.1\linewidth]{}
-	\caption[Fig 2]{caption 2}
-	\label{Fig 3}
-\end{figure}
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=1.1\linewidth]{}
+%	\caption[Fig 2]{caption 2}
+%	\label{Fig 3}
+%\end{figure}
 
 % TODO: \usepackage{graphicx} required
-\begin{figure}
-	\centering
-	\includegraphics[width=0.9\linewidth]{}
-	\caption[Fig 3]{caption 3}
-	\label{Fig 4}
-\end{figure}
+%\begin{figure}
+%	\centering
+%	\includegraphics[width=0.9\linewidth]{}
+%	\caption[Fig 3]{caption 3}
+%	\label{Fig 4}
+%\end{figure}
 
 
 \subsection{Limitations/ Further Work}
