--- a/MCM_2021_Madison_Writing/references.bib
+++ b/MCM_2021_Madison_Writing/references.bib
@@ -1,4 +1,4 @@
-@book{holdridge1947,
+@book{Holdridge1947,
   title={Determination of world plant formations from simple climatic data},
   author={Holdridge, LR.},
   isbn={},
@@ -7,7 +7,7 @@
   publisher={Science}
 }
 
-@book{whittaker1970,
+@book{Whittaker1970,
   title={Communities and ecosystems},
   author={Whittaker, RH.},
   isbn={},
@@ -16,7 +16,7 @@
   publisher={Macmillan}
 }
 
-@book{mucina2018,
+@book{Mucina2018,
   title={Biome: evolution of a crucial ecological and biogeographical concept},
   author={Mucina, Ladislav},
   isbn={},
