--- a/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
+++ b/MCM2021 LaTeX paper/MCM2021 LaTeX paper.tex
@@ -76,39 +76,70 @@ sorting=ynt]{biblatex}
 
 
 \begin{multicols}{2}
+	
+%\section{Pre-planning analysis}
+%- 
+	
+\section{Introduction}
+
+Decomposition by fungal and microbial communities is second only to photosynthesis in driving carbon cycling in the Earth's ecological communities. \cite{McGuire2010} While this significance is rarely understated, inner mechanisms and interactions within decomposition communities have been poory understood and treated as a 'black box' in the past by scientists studying ecosystem processes. \cite{Andren1999}
+
+Fungi are made up of hyphae: long winding filaments enmeshed together to form a thick mat of mycelium. At the frontline of battle, hyphal tips are extending forward and branching to cover new area at a velocity dictated by the hyphal extension rate, and concurrently other hyphae are dying off or merging together. \cite{Edelstein1982} Like machinery, each fungus has ideal operating conditions. Fungus native to dry or arid biomes will grow efficiently in a moisture-lacking environment when other fungus will falter. Maynard et. al. defines these operating conditions by assigning temperature and moisture niche-widths to 38 studied species of fungi. 
+
+When fungi come into contact with each other, competitive interactions are most often observed. Tactics studied in Boddy, L. 2000 include deploying diffusable toxins, obtaining nutrients parasitically, destruction of hyphae by intentional interference, and establishing wall-like barracades to thwart attackers. \cite{Boddy2000} Most researchers, including Maynard et. al. construct a competitive ranking scale based on experimental observations to encapsulate the ramifications of these complex interactions. 
+
+Under a constant temperature regime, previous research concludes that dominant fast-growing suppress other species which negatively impacts the overall community's efficiency, however fluctuating environmental conditions change the outcome and promote complementary growth. \cite{Toljander2006} An explanation for this is presented by Lustenhouwer et. al. suggesting a spectrum between slow-growing, stress-tolerant fungi operating in a wider environmental range than fast-growing, highly competitive fungi. \cite{Lustenhouwer2020} 
+
+Determining which fungi are present in a community depends on the organic material, or 'substrate', being broken down. In the case of fungal-mediated wood decomposition, the substrate is made up of lignocellulose polysaccarides, and the fungi involved are equipped with specialized enzymes capable of splitting linkages in the polymers to harvest usable carbohydrates. Long-term wood decomposition follows a well-studied three-phase process: the first phase is dominated by fast and opportunistic fungus claiming easily-consumable soluble sugars, followed in the second phase by consistent and dependable decomposers that degrade the holocellulose constituting 65\%-85\% of the material. \cite{Aspergilli} Slow and highly specialized fungi trail behind in the third phase to clean up rigid lignin polymers (15\%-35\%) with powerful oxidative enzymes. \cite{Moorhead2006} This phase progression is an important agent governing community changes on the long-term scale, however, this paper will focus on only the middle phase of cellulose decomposition and will not conider lignin decomposition. Fungi containing larger proportions of enzymes like acid phosphatase which are associated with lignin decomposition are demonstrated to strongly correlate with slower decomposition rates by Lustenhouwer et. al.
+
+An important step in modeling fungal communities is acknowledging separation between the growth rate and the decomposition rate of the fungus, which are influenced by different factors. Fungal growth models typically focus on the increase in overall biomass due to hyphal extension. As described by [Edelstein 1982], the growth of hyphae over time depends on the spacial density of hypae tips (from which hyphae can extend and grow), the tip extension rate and the hyphal death rate. The tips are created by various forms of branching. This model is summed up by the following equations:
+
+\begin{equation} \label {eq}
+\frac{\partial \rho}{\partial t} = n\nu - d
+\end{equation}
+\begin{equation} \label {eq}
+\frac{\partial n}{\partial t} = -\frac{\partial n\nu}{\partial x} + \sigma
+\end{equation}
+
+These equations form a basis for many other models, typically expanding on the effects of nutrient concentrations in the decomposing substrate. The largest assumption made by this model that we will differ from is the assumption that the mycellium grows over an unlimited nutrient supply. Both [Edelstein 1983 Growth and Metabolism in Mycelial Fungi] and [Davidson and Park, 1997] expanded on this model to include interactions with an external substrate by considering concentrations of nutrients both inside and outside the fungi. 
+\\ Another note-worthy growth model is described in [Du, Tran, Perre 2019]. This more recent model describes the growth of the fungus as a 3-dimensional reaction-diffusion equation based on microscopic growth mechanisms, also in terms of the tip density, tip extension rate, hyphal branching, and hyphal elimination rates. However this model also has an added term, the proportion of active tips. In all models, the terms for $\nu$, $\sigma$ are taken to be constants given from experimental data. As noted in [Edelstein 1982], these parameters are seen to depend on nutrient availability and environmental factors in practice. In the review of various fungal growth models described in [Bayesian model selection framework for identifying growth patterns in filamentous fungi, 2016], a specific method of modeling branching and hyphal death was found to match experimental observations in the widest variety of settings. Based on these results we will choose to implement the following relationships, comprising dichotomous branching, tip-hypha anastomosis, and hyphal death (or YHD). 
+\begin{equation} \label {eq}
+\sigma = \alpha_{1}*n - \mu n \rho
+\end{equation}
+
+\begin{equation} \label {eq}
+d = \gamma_{1}\rho
+\end{equation}
+
 \section{Pre-planning intro}
+
 The Five Core Tenants:
 1. growth/Decomposition continuous model
 - general explanation of the structure of fungi: hyphal extension rate, branching, tips, death, etc.
 - proportion of enzymes relative to the phases correlates with the speed of decomposition and effectiveness in a certain phase
-- substrate talk
+- substrate talk - LCI, lignin inhibition of holocellulose, common substrate compositions, how soil is different
 - phases talk
 - reasoning behind choosing a continuous model
 
 2. interactions between different fungi with differing characteristics
-- competitive interactions
-- synergy under richness and fluctuating temperatures
+- competitive interactions *
+- synergy under richness and fluctuating temperatures *
 - the more differing the characteristics of the fungi, the more likely they are to compete
-- the competitive ranking
+- the competitive ranking *
 
 3. sensitivity to environmental fluctuations
-- slower-growth stress tolerant fungi vs fast growth more niche temp/moisture fungi determining which of these two wins out depends on how much the environment is fluctuating and what subset of fungi are present
+- slower-growth stress tolerant fungi vs fast growth more niche temp/moisture fungi determining which of these two wins out depends on how much the environment is fluctuating and what subset of fungi are present *
 - fluctuating temperatures promotes growth
-- moisture talk
+- moisture talk *
 - biome talk
 
 4. biodiversity's impact on systems overall efficiency
 - richness promotes growth
-- competition promotes efficiency
-- dominant species that 'wipe out' the community generally harm?
+- competition promotes efficiency *
+- dominant species that 'wipe out' the community generally harm? *
 
 5. effect on the carbon cycle
 - fungi/bacteria are the only life forms which can break down lignin and efficiency break down holocellulose litter — these poysaccarides make up a huge portion of the total ground litter biomass in the earth's forests
-
-
-\section{Introduction}
-
-This is a test of the introduction \cite{Du2019}
 
 Biodiversity's impact on the system's overall efficiency:
 - the greater range you have of moisture/temperature niche widths, the more tolerant your fungal community will be overall to growing in any particular environmental because at least some constituents of the community will be close to idealized in that environment.
@@ -121,6 +152,8 @@ Strong correlation that increase production of acid phospatase results in decrea
 Assumption: enzymes treatment of the different portions of holocellulose are the same 
 
 Implementation: each enzyme has its production rate from the data, multiply the parameter by that production rate and sum them all together to get dC/dt
+
+Recapitulating previous literature
 
 
 Prediction:
