Adding section on fungal interactions and coupled growth and decomp

--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -85,6 +85,18 @@ The effect of two main parameters were studied for their effect on the growth mo
 \subsection*{Decomposition parameters}
 The value for $G$ is interpreted as a rate constant, relating a concentration of relative enzymes to the maximum rate of carbon decomposition. formulation for $S_{M}$ and $S_{T}$ come from [Moorhead 1991] and in said model, a simpler equation is used for the reaction dynamics for decomposition of carbon. Because of this, we cannot use the same rate constant and must base this parameter of agreement with other models or experimental data. The most important aspect we examined for the section of $G$ was the timescale of decomposition to be comparable with that of [Lustenhouwer 2019].
 \subsection*{Representative results}
-As a representative result of the coupled growth and decomposition model, the two were run using the parameters summarized in (parameter table). In the growth model, $\rho$ was found to exibit travelling wave dispersion throughout space, as similarly shown in [Mimura 2000] and [Edelstein 1982]. Due to the simulation only running for a timespan of 3 years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time.
+As a representative result of the coupled growth and decomposition model, the two were run using the parameters summarized in (parameter table). In the growth model, $\rho$ was found to exibit travelling wave dispersion throughout space, as similarly shown in [Mimura 2000] and [Edelstein 1982]. Due to the simulation only running for a timespan of 3 years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time. The first initial runs were done without the coupling term in the growth equations, so the growth model was assuming an abundance of nutrients and not affected by the decreasing concentration of carbon. Depending on the timescale being simulated, that could be a perfectly valid assumption, as short time scales tended to show little overall decrease in the concentration of holocellulose carbon. However the differences seen in including the nutrient availability term in the growth equations become more apparent as longer time scales are considered. The effects of this can be seen in our results. The overall biomass was also mostly unaffected other than replacing decaying oscillations towards a steady state with a somewhat constantly increasing biomass overtime with a decaying slope. Overall, including the nutrient availability term in the growth equation captures more of the fundamental interaction that this paper is concerned with (that of decomposing wood and ground litter rather than free-growing fungi), so it was included in further analysis. 
+
+
+\section*{Fungal species interaction}
+Due to the complex mechanisms of direct interaction between fungi, we chose to focus not on the direct interactions between the fungi in their consumption of the substraight, but on the interactions caused by differing rates of decomposition among different enzymes in varying environmental conditions and how the relative amounts of different bacteria in a fungi species will impact its competition. This was formulated in the model by taking the weighted sum of all contributions to the decomposition rate from any one of four enzymes in a given fungi species, represented in the following equation
+\begin{equation} \label{eq}
+    \frac{dC_{1}}{dt} = c_{1,a}\frac{de_{1,a}}{dt} + c_{1,b}\frac{de_{1,d}}{dt} + c_{1,c}\frac{de_{1,c}}{dt} + c_{1,d}\frac{de_{1,d}}{dt}
+\end{equation}
+Where $c_{1,a}$ is a enzyme breakdown efficiency coefficient for the fungal species $1$ and enzyme $a$. Here the rate $\frac{dC_{1}}{dt}$ is representative of the rate of decay of the substrate by the fungi species $1$. The total decomposition rate is then given by the sum of all rates over the various species of fungi.
+\begin{equation} \label{eq}
+    \frac{dC_{tot}}{dt} = \sum_{i=1}^{n}\frac{dC_{i}}{dt}
+\end{equation}
+Where $n$ is the total number of fungi being simulated. 
 
 \end{document}
