trevor's dumb table

--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -53,13 +53,13 @@ The constant $K=rS_{M}S_{T}$ is taken to be the proportion of a specific enzyme 
 \end{equation}
 
 
-\section*{Parameters}
-\begin{center}
-\begin{tabular}{ c c c c }
-\nu & \alpha_{1} & \mu & \gamma_{1} \\
-0.28 cm/d & 0.74 d^{-1} & 0.15 cm^3m^{-1}d^{-1} & 0.73 d^{-1}\\
-\end{tabular}
-\end{center}
+%\section*{Parameters}
+%\begin{center}
+%\begin{tabular}{ c c c c }
+%\nu$ & $\alpha_{1$} & $\mu$ & $\gamma_{1}$ \\
+%0.28 cm/d & 0.74 d^{-1} & 0.15 cm^3m^{-1}d^{-1} & 0.73 d^{-1}\\
+%\end{tabular}
+%\end{center}
 
 \section*{Coupled growth and decomposition model}
 To see the dynamics effects of the fungal growth on the rates of decomposition reactions (via enzymes in the fungi) the above models are coupled such that the total biomass found from the growth model will multiply the maximum rate of the Michaelis-Menten reaction equation. The  relationship can be summarized as follows
